--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ros_ci_example_bb</name>
+  <name>ros_ci_example_gh</name>
   <version>0.0.1</version>
   <description>Example ROS package to use CI</description>
 
@@ -10,6 +10,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>message_generation</depend>
 
   <export>
     <!-- Other tools can request additional information be placed here -->
